# Void.INC

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
Bubble Incremental Website/: bubble-incremental-announcements.html  bubble-incremental-home.html  bubble-incremental-patch-notes.html  bubble-incremental-roadmap.html
Bubble Incremental Website/Bubble Incremental Wikipedia/: bubble-incremental-wiki-home.html
Bubble Incremental Website/styles/: bubble-incremental-patch-notes.css
Incremental/: Achievements.h  AchievementsList.h  BubblesFormat.h  BuffTypes.h  CMakeLists.txt  Combo.h  GameFileState.h  GlobalBubblesVariants.h  GlobalBuffHandler.h  GlobalTextures.h  GlobalVariables.h  Incremental.cpp  Marketplace.h  NewsTicker.h  Popup.h  ShootingStarBubble.h  UpgradeRarities.h  Upgrades.h  UpgradesList.h  WeatherCycle.h  WeatherVisuals.h
Incremental-Legacy/: CMakeLists.txt
Incremental-Legacy/Achievements/: Achievements.hpp  AchievementsList.hpp
Incremental-Legacy/Bubbles/: Bubbles.hpp  BubblesFormat.hpp  OfflineBubbles.hpp
Incremental-Legacy/Buffs/: GlobalBuffHandler.hpp
Incremental-Legacy/Buffs/Bubbles/: BubbleChaos.hpp  BubbleFrenzy.hpp  BubbleMayhem.hpp  MutatedBubble.hpp  ShootingStarBubble.hpp
Incremental-Legacy/Buffs/Potions/: Potions.hpp  PotionsList.hpp
Incremental-Legacy/Buffs/Trader/: TradersList.hpp
Incremental-Legacy/Clicking/: ClickingHotspots.hpp  CritCombo.hpp
Incremental-Legacy/Marketplace/: PotionBrewery.hpp
Incremental-Legacy/Misc/: GlobalFunctions.hpp  GlobalTextures.hpp  Includes.hpp  NewsTicker.hpp  Popup.hpp  json.hpp
Incremental-Legacy/Upgrades/: UpgradeRarities.hpp  Upgrades.hpp  UpgradesList.hpp
Incremental-Legacy/Weather/: WeatherVisuals.hpp
Incremental/Achievements/: AchievementsTab.hpp
Incremental/Ascension/: Ascension.hpp
Incremental/Buffs/Bubbles/: MutatedBubble.hpp
Incremental/Buffs/Potions/: Potions.hpp
Incremental/Marketplace/: Marketplace.hpp  PotionBrewery.hpp  Trader.hpp
Incremental/Misc/: GameFileState.hpp  GlobalTextures.hpp  GlobalVariables.hpp  NewsTicker.hpp
Incremental/Weather/: WeatherCycle.hpp
Python Scripts/: capycapy.py  click-achievements_gen.py  dashboard.py  habits.py  htmlpreview.py  item-achievements_gen.py  md2htmlnreverse.py  mdpreview.py  notes.py  pomodoro.py  sqliteview.py  upgrades-achievements_gen.py  upgrades-items_patchgen.py
Python Scripts/Data/: dashboard_log.txt  habits.db  notes.db  pomo_sessions.db  quick_notes.txt
Void.INC/: CMakeLists.txt  Void_INC.cpp
Void.INC/Bits/: Format.hpp  Offline.hpp
Void.INC/LogicGate/: Hotfixes.hpp  LogicGate.hpp
Void.INC/Misc/: GFunctions.hpp  GVariables.hpp
Void.INC/Re-initialization/: Initialization.hpp  Re-initialization.hpp
Void.INC/UI/: Terminal.hpp  Vortex.hpp
docs/: bubble-incremental-announcements.html  bubble-incremental-patch-notes.html  bubble-incremental-roadmap.html  bubble-incremental-version-control.html  index.html
(+37 files in other folders)
